--- a/layouts/default.htm
+++ b/layouts/default.htm
@@ -34,14 +34,17 @@ description = "layout default"
 </head>
 <body>
    
+  
+  {% if this.page.id == 'homepage' %}
     <section class="hero hero_top is-black is-fullheight">
         <!-- Hero head: will stick at the top -->
         <div class="hero-head">
              {% partial 'navbar'%}
-          </nav>
+        
         </div>
       
         <!-- Hero content: will be in the middle -->
+       
         <div class="hero-body" >
           <div class="container has-text-centered" >
             <h1 class="title">
@@ -52,9 +55,16 @@ description = "layout default"
             </h2>
           </div>
         </div>
-
+        
       </section>
+      {% else %}
       
+      {% partial 'navbar'%}
+
+{% endif %}
+
+      
+
        {% page %}
 
 
